@@ -1,19 +1,28 @@
 package com.linkedin.metadata.resources.entity;
 
-import static com.linkedin.metadata.Constants.*;
+import static com.datahub.authorization.AuthUtil.*;
+import static com.linkedin.metadata.authorization.ApiGroup.COUNTS;
+import static com.linkedin.metadata.authorization.ApiGroup.LINEAGE;
+import static com.linkedin.metadata.authorization.ApiGroup.TIMESERIES;
+import static com.linkedin.metadata.authorization.ApiOperation.CREATE;
+import static com.linkedin.metadata.authorization.ApiOperation.DELETE;
+import static com.linkedin.metadata.authorization.ApiOperation.EXISTS;
+import static com.linkedin.metadata.authorization.ApiOperation.READ;
 import static com.linkedin.metadata.entity.validation.ValidationUtils.*;
 import static com.linkedin.metadata.resources.restli.RestliConstants.*;
-import static com.linkedin.metadata.resources.restli.RestliUtils.*;
 import static com.linkedin.metadata.search.utils.SearchUtils.*;
-import static com.linkedin.metadata.shared.ValidationUtils.*;
 import static com.linkedin.metadata.utils.PegasusUtils.*;
 
 import com.codahale.metrics.MetricRegistry;
 import com.datahub.authentication.Authentication;
 import com.datahub.authentication.AuthenticationContext;
+import com.datahub.authorization.AuthUtil;
 import com.datahub.authorization.EntitySpec;
+
+import io.datahubproject.metadata.context.RequestContext;
+import io.datahubproject.metadata.services.RestrictedService;
+import com.linkedin.data.template.SetMode;
 import io.datahubproject.metadata.context.OperationContext;
-import io.datahubproject.metadata.context.OperationContextConfig;
 import com.datahub.plugins.auth.authorization.Authorizer;
 import com.google.common.collect.ImmutableList;
 import com.linkedin.common.AuditStamp;
@@ -116,6 +125,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   private static final String PARAM_START_TIME_MILLIS = "startTimeMillis";
   private static final String PARAM_END_TIME_MILLIS = "endTimeMillis";
   private static final String PARAM_URN = "urn";
+  private static final String PARAM_INCLUDE_SOFT_DELETE = "includeSoftDelete";
   private static final String SYSTEM_METADATA = "systemMetadata";
   private static final String ES_FIELD_TIMESTAMP = "timestampMillis";
   private static final Integer ELASTIC_MAX_PAGE_SIZE = 10000;
@@ -123,47 +133,51 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
 
   @Inject
   @Named("entityService")
-  private EntityService<?> _entityService;
+  private EntityService<?> entityService;
 
   @Inject
   @Named("searchService")
-  private SearchService _searchService;
+  private SearchService searchService;
 
   @Inject
   @Named("entitySearchService")
-  private EntitySearchService _entitySearchService;
+  private EntitySearchService entitySearchService;
 
   @Inject
   @Named("systemMetadataService")
-  private SystemMetadataService _systemMetadataService;
+  private SystemMetadataService systemMetadataService;
 
   @Inject
   @Named("relationshipSearchService")
-  private LineageSearchService _lineageSearchService;
+  private LineageSearchService lineageSearchService;
 
   @Inject
   @Named("kafkaEventProducer")
-  private EventProducer _eventProducer;
+  private EventProducer eventProducer;
 
   @Inject
   @Named("graphService")
-  private GraphService _graphService;
+  private GraphService graphService;
 
   @Inject
   @Named("deleteEntityService")
-  private DeleteEntityService _deleteEntityService;
+  private DeleteEntityService deleteEntityService;
 
   @Inject
   @Named("timeseriesAspectService")
-  private TimeseriesAspectService _timeseriesAspectService;
+  private TimeseriesAspectService timeseriesAspectService;
 
   @Inject
   @Named("authorizerChain")
-  private Authorizer _authorizer;
+  private Authorizer authorizer;
 
   @Inject
   @Named("systemOperationContext")
   private OperationContext systemOperationContext;
+
+  @Inject
+  @Named("restrictedService")
+  private RestrictedService restrictedService;
 
   /** Retrieves the value for an entity that is made up of latest versions of specified aspects. */
   @RestMethod.Get
@@ -174,15 +188,13 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       throws URISyntaxException {
     log.info("GET {}", urnStr);
     final Urn urn = Urn.createFromString(urnStr);
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urnStr))) {
+    if (!isAPIAuthorizedEntityUrns(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            READ,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity " + urn);
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity " + urn);
     }
     return RestliUtil.toTask(
         () -> {
@@ -190,7 +202,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
               aspectNames == null
                   ? Collections.emptySet()
                   : new HashSet<>(Arrays.asList(aspectNames));
-          final Entity entity = _entityService.getEntity(urn, projectedAspects);
+          final Entity entity = entityService.getEntity(urn, projectedAspects);
           if (entity == null) {
             throw RestliUtil.resourceNotFoundException(String.format("Did not find %s", urnStr));
           }
@@ -211,19 +223,14 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     for (final String urnStr : urnStrs) {
       urns.add(Urn.createFromString(urnStr));
     }
-    List<java.util.Optional<EntitySpec>> resourceSpecs =
-        urns.stream()
-            .map(urn -> java.util.Optional.of(new EntitySpec(urn.getEntityType(), urn.toString())))
-            .collect(Collectors.toList());
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            resourceSpecs)) {
+
+    if (!isAPIAuthorizedEntityUrns(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            READ,
+            urns)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entities: " + urnStrs);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entities: " + urnStrs);
     }
     return RestliUtil.toTask(
         () -> {
@@ -231,7 +238,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
               aspectNames == null
                   ? Collections.emptySet()
                   : new HashSet<>(Arrays.asList(aspectNames));
-          return _entityService.getEntities(urns, projectedAspects).entrySet().stream()
+          return entityService.getEntities(urns, projectedAspects).entrySet().stream()
               .collect(
                   Collectors.toMap(
                       entry -> entry.getKey().toString(),
@@ -263,14 +270,13 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     Authentication authentication = AuthenticationContext.getAuthentication();
     String actorUrnStr = authentication.getActor().toUrnStr();
     final Urn urn = com.datahub.util.ModelUtils.getUrnFromSnapshotUnion(entity.getValue());
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    if (!isAPIAuthorizedEntityUrns(
             authentication,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.EDIT_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urn.toString()))) {
+            authorizer,
+            CREATE,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to edit entity " + urn);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to edit entity " + urn);
     }
 
     try {
@@ -288,7 +294,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     final SystemMetadata finalSystemMetadata = systemMetadata;
     return RestliUtil.toTask(
         () -> {
-          _entityService.ingestEntity(entity, auditStamp, finalSystemMetadata);
+          entityService.ingestEntity(entity, auditStamp, finalSystemMetadata);
           return null;
         },
         MetricRegistry.name(this.getClass(), "ingest"));
@@ -304,20 +310,16 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
 
     Authentication authentication = AuthenticationContext.getAuthentication();
     String actorUrnStr = authentication.getActor().toUrnStr();
-    List<java.util.Optional<EntitySpec>> resourceSpecs =
-        Arrays.stream(entities)
-            .map(Entity::getValue)
-            .map(com.datahub.util.ModelUtils::getUrnFromSnapshotUnion)
-            .map(urn -> java.util.Optional.of(new EntitySpec(urn.getEntityType(), urn.toString())))
-            .collect(Collectors.toList());
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    if (!isAPIAuthorizedEntityUrns(
             authentication,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.EDIT_ENTITY_PRIVILEGE),
-            resourceSpecs)) {
+            authorizer,
+            CREATE,
+            Arrays.stream(entities)
+                    .map(Entity::getValue)
+                    .map(com.datahub.util.ModelUtils::getUrnFromSnapshotUnion).collect(Collectors.toList()))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to edit entities.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to edit entities.");
     }
 
     for (Entity entity : entities) {
@@ -346,7 +348,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
 
     return RestliUtil.toTask(
         () -> {
-          _entityService.ingestEntities(
+          entityService.ingestEntities(
               Arrays.asList(entities), auditStamp, finalSystemMetadataList);
           return null;
         },
@@ -365,18 +367,20 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_COUNT) int count,
       @Optional @Deprecated @Nullable @ActionParam(PARAM_FULLTEXT) Boolean fulltext,
       @Optional @Nullable @ActionParam(PARAM_SEARCH_FLAGS) SearchFlags searchFlags) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+             READ,
+            entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
 
-    OperationContext opContext = OperationContext.asSession(systemOperationContext, _authorizer, auth, true);
+    OperationContext opContext = OperationContext.asSession(systemOperationContext,
+                    RequestContext.builder().buildRestli(ACTION_SEARCH, entityName), authorizer, auth, true)
+            .withSearchFlags(flags -> searchFlags != null ? searchFlags : new SearchFlags().setFulltext(Boolean.TRUE.equals(fulltext)));
 
     log.info("GET SEARCH RESULTS for {} with query {}", entityName, input);
     // TODO - change it to use _searchService once we are confident on it's latency
@@ -385,9 +389,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
           final SearchResult result;
           // This API is not used by the frontend for search bars so we default to structured
           result =
-              _entitySearchService.search(opContext,
+              entitySearchService.search(opContext,
                   List.of(entityName), input, filter, sortCriterion, start, count);
-          return validateSearchResult(result, _entityService);
+
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+
+          return validateSearchResult(result, entityService);
         },
         MetricRegistry.name(this.getClass(), "search"));
   }
@@ -403,29 +416,36 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_START) int start,
       @ActionParam(PARAM_COUNT) int count,
       @ActionParam(PARAM_SEARCH_FLAGS) @Optional SearchFlags searchFlags) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
-      throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
-    }
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
     OperationContext opContext = OperationContext.asSession(
-            systemOperationContext, _authorizer, auth, true)
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_SEARCH_ACROSS_ENTITIES, entities), authorizer, auth, true)
             .withSearchFlags(flags -> searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true));
 
-    List<String> entityList = entities == null ? Collections.emptyList() : Arrays.asList(entities);
+    List<String> entityList = searchService.getEntitiesToSearch(opContext, entities == null ? Collections.emptyList() : Arrays.asList(entities), count);
+    if (!isAPIAuthorizedEntityType(
+            auth,
+            authorizer,
+            READ,
+            entityList)) {
+      throw new RestLiServiceException(
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
+    }
+
     log.info("GET SEARCH RESULTS ACROSS ENTITIES for {} with query {}", entityList, input);
     return RestliUtil.toTask(
-        () ->
-            validateSearchResult(
-                _searchService.searchAcrossEntities(opContext,
-                    entityList, input, filter, sortCriterion, start, count),
-                _entityService),
-        "searchAcrossEntities");
+        () -> {
+          SearchResult result = searchService.searchAcrossEntities(opContext, entityList, input, filter, sortCriterion, start, count);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+
+          return validateSearchResult(result, entityService);
+        });
   }
 
   @Action(name = ACTION_SCROLL_ACROSS_ENTITIES)
@@ -440,12 +460,21 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_KEEP_ALIVE) String keepAlive,
       @ActionParam(PARAM_COUNT) int count,
       @ActionParam(PARAM_SEARCH_FLAGS) @Optional SearchFlags searchFlags) {
-    Authentication auth = AuthenticationContext.getAuthentication();
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
     OperationContext opContext = OperationContext.asSession(
-            systemOperationContext, _authorizer, auth, true)
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_SCROLL_ACROSS_ENTITIES, entities), authorizer, auth, true)
             .withSearchFlags(flags -> searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true));
 
-    List<String> entityList = entities == null ? Collections.emptyList() : Arrays.asList(entities);
+    List<String> entityList = searchService.getEntitiesToSearch(opContext, entities == null ? Collections.emptyList() : Arrays.asList(entities), count);
+    if (!isAPIAuthorizedEntityType(
+            auth,
+            authorizer,
+            READ, entityList)) {
+      throw new RestLiServiceException(
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
+    }
+
     log.info(
         "GET SCROLL RESULTS ACROSS ENTITIES for {} with query {} and scroll ID: {}",
         entityList,
@@ -453,18 +482,26 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
         scrollId);
 
     return RestliUtil.toTask(
-        () ->
-            validateScrollResult(
-                _searchService.scrollAcrossEntities(
-                        opContext,
-                    entityList,
-                    input,
-                    filter,
-                    sortCriterion,
-                    scrollId,
-                    keepAlive,
-                    count),
-                _entityService),
+        () -> {
+          ScrollResult result = searchService.scrollAcrossEntities(
+                  opContext,
+                  entityList,
+                  input,
+                  filter,
+                  sortCriterion,
+                  scrollId,
+                  keepAlive,
+                  count);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+
+          return validateScrollResult(result, entityService);
+        },
         "scrollAcrossEntities");
   }
 
@@ -485,21 +522,22 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_END_TIME_MILLIS) @Optional @Nullable Long endTimeMillis,
       @Optional @Nullable @ActionParam(PARAM_SEARCH_FLAGS) SearchFlags searchFlags)
       throws URISyntaxException {
-
-    Authentication auth = AuthenticationContext.getAuthentication();
-    OperationContext opContext = OperationContext.asSession(
-                    systemOperationContext, _authorizer, auth, true)
-            .withSearchFlags(flags -> searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true));
-
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            LINEAGE, READ)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
+    OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_SEARCH_ACROSS_LINEAGE, entities), authorizer, auth, true)
+            .withSearchFlags(flags -> (searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true))
+                    .setIncludeRestricted(true))
+            .withLineageFlags(flags -> flags.setStartTimeMillis(startTimeMillis, SetMode.REMOVE_IF_NULL)
+                    .setEndTimeMillis(endTimeMillis, SetMode.REMOVE_IF_NULL));
+
     Urn urn = Urn.createFromString(urnStr);
     List<String> entityList = entities == null ? Collections.emptyList() : Arrays.asList(entities);
     log.info(
@@ -509,22 +547,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
         entityList,
         input);
     return RestliUtil.toTask(
-        () ->
-            validateLineageSearchResult(
-                _lineageSearchService.searchAcrossLineage(
-                        opContext,
-                    urn,
-                    LineageDirection.valueOf(direction),
-                    entityList,
-                    input,
-                    maxHops,
-                    filter,
-                    sortCriterion,
-                    start,
-                    count,
-                    startTimeMillis,
-                    endTimeMillis),
-                _entityService),
+        () -> validateLineageSearchResult(lineageSearchService.searchAcrossLineage(
+                  opContext,
+                  urn,
+                  LineageDirection.valueOf(direction),
+                  entityList,
+                  input,
+                  maxHops,
+                  filter,
+                  sortCriterion,
+                  start,
+                  count),
+            entityService),
         "searchAcrossRelationships");
   }
 
@@ -547,10 +581,22 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_SEARCH_FLAGS) @Optional @Nullable SearchFlags searchFlags)
       throws URISyntaxException {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
+            auth,
+            authorizer,
+            LINEAGE, READ)) {
+      throw new RestLiServiceException(
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
+    }
+
     OperationContext opContext = OperationContext.asSession(
-                    systemOperationContext, _authorizer, auth, true)
-            .withSearchFlags(flags -> searchFlags != null ? searchFlags : new SearchFlags().setSkipCache(true));
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_SCROLL_ACROSS_LINEAGE, entities),
+            authorizer, auth, true)
+            .withSearchFlags(flags -> (searchFlags != null ? searchFlags : new SearchFlags().setSkipCache(true))
+                    .setIncludeRestricted(true))
+            .withLineageFlags(flags -> flags.setStartTimeMillis(startTimeMillis, SetMode.REMOVE_IF_NULL)
+                    .setEndTimeMillis(endTimeMillis, SetMode.REMOVE_IF_NULL));
 
     Urn urn = Urn.createFromString(urnStr);
     List<String> entityList = entities == null ? Collections.emptyList() : Arrays.asList(entities);
@@ -564,7 +610,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     return RestliUtil.toTask(
         () ->
             validateLineageScrollResult(
-                _lineageSearchService.scrollAcrossLineage(
+                lineageSearchService.scrollAcrossLineage(
                         opContext,
                     urn,
                     LineageDirection.valueOf(direction),
@@ -575,10 +621,8 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
                     sortCriterion,
                     scrollId,
                     keepAlive,
-                    count,
-                    startTimeMillis,
-                    endTimeMillis),
-                _entityService),
+                    count),
+                entityService),
         "scrollAcrossLineage");
   }
 
@@ -592,27 +636,33 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_START) int start,
       @ActionParam(PARAM_COUNT) int count) {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
     OperationContext opContext = OperationContext.asSession(
-            systemOperationContext, _authorizer, auth, true)
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_LIST, entityName), authorizer, auth, true)
             .withSearchFlags(flags -> new SearchFlags().setFulltext(false));
 
     log.info("GET LIST RESULTS for {} with filter {}", entityName, filter);
     return RestliUtil.toTask(
-        () ->
-            validateListResult(
-                toListResult(
-                    _entitySearchService.filter(opContext, entityName, filter, sortCriterion, start, count)),
-                _entityService),
+        () -> {
+            SearchResult result = entitySearchService.filter(opContext, entityName, filter, sortCriterion, start, count);
+          if (!AuthUtil.isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+            return validateListResult(
+                toListResult(result), entityService);
+          },
         MetricRegistry.name(this.getClass(), "filter"));
   }
 
@@ -627,22 +677,30 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_LIMIT) int limit,
       @ActionParam(PARAM_SEARCH_FLAGS) @Optional @Nullable SearchFlags searchFlags) {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+             READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
     OperationContext opContext = OperationContext.asSession(
-            systemOperationContext, _authorizer, auth, true)
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_AUTOCOMPLETE, entityName), authorizer, auth, true)
             .withSearchFlags(flags -> searchFlags != null ? searchFlags : flags);
 
     return RestliUtil.toTask(
-        () -> _entitySearchService.autoComplete(opContext, entityName, query, field, filter, limit),
+        () -> {
+          AutoCompleteResult result = entitySearchService.autoComplete(opContext, entityName, query, field, filter, limit);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+          return result; },
         MetricRegistry.name(this.getClass(), "autocomplete"));
   }
 
@@ -657,26 +715,34 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_LIMIT) int limit,
       @ActionParam(PARAM_SEARCH_FLAGS) @Optional @Nullable SearchFlags searchFlags) {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+             READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
     OperationContext opContext = OperationContext.asSession(
-                    systemOperationContext, _authorizer, auth, true)
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_BROWSE, entityName), authorizer, auth, true)
             .withSearchFlags(flags -> searchFlags != null ? searchFlags : flags);
 
     log.info("GET BROWSE RESULTS for {} at path {}", entityName, path);
     return RestliUtil.toTask(
-        () ->
-            validateBrowseResult(
-                _entitySearchService.browse(opContext, entityName, path, filter, start, limit),
-                _entityService),
+        () -> {
+          BrowseResult result = entitySearchService.browse(opContext, entityName, path, filter, start, limit);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+          return validateBrowseResult(
+                result,
+                  entityService);
+            },
         MetricRegistry.name(this.getClass(), "browse"));
   }
 
@@ -685,19 +751,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   @WithSpan
   public Task<StringArray> getBrowsePaths(
       @ActionParam(value = PARAM_URN, typeref = com.linkedin.common.Urn.class) @Nonnull Urn urn) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urn.toString()))) {
+
+    if (!isAPIAuthorizedEntityUrns(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+             READ,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity: " + urn);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity: " + urn);
     }
     log.info("GET BROWSE PATHS for {}", urn);
     return RestliUtil.toTask(
-        () -> new StringArray(_entitySearchService.getBrowsePaths(urnToEntityName(urn), urn)),
+        () -> new StringArray(entitySearchService.getBrowsePaths(urnToEntityName(urn), urn)),
         MetricRegistry.name(this.getClass(), "getBrowsePaths"));
   }
 
@@ -740,7 +805,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
         () -> {
           RollbackResponse response = new RollbackResponse();
           List<AspectRowSummary> aspectRowsToDelete =
-              _systemMetadataService.findByRegistry(
+              systemMetadataService.findByRegistry(
                   finalRegistryName,
                   finalRegistryVersion.toString(),
                   false,
@@ -752,23 +817,14 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
               aspectRowsToDelete.stream()
                   .collect(Collectors.groupingBy(AspectRowSummary::getUrn))
                   .keySet();
-          List<java.util.Optional<EntitySpec>> resourceSpecs =
-              urns.stream()
-                  .map(UrnUtils::getUrn)
-                  .map(
-                      urn ->
-                          java.util.Optional.of(
-                              new EntitySpec(urn.getEntityType(), urn.toString())))
-                  .collect(Collectors.toList());
-          Authentication auth = AuthenticationContext.getAuthentication();
-          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-              && !isAuthorized(
-                  auth,
-                  _authorizer,
-                  ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE),
-                  resourceSpecs)) {
+
+          if (!isAPIAuthorizedEntityUrns(
+                  AuthenticationContext.getAuthentication(),
+                  authorizer,
+                  DELETE,
+                  urns.stream().map(UrnUtils::getUrn).collect(Collectors.toSet()))) {
             throw new RestLiServiceException(
-                HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to delete entities.");
+                HttpStatus.S_403_FORBIDDEN, "User is unauthorized to delete entities.");
           }
           response.setEntitiesAffected(urns.size());
           response.setEntitiesDeleted(
@@ -780,7 +836,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
             Map<String, String> conditions = new HashMap();
             conditions.put("registryName", finalRegistryName1);
             conditions.put("registryVersion", finalRegistryVersion1.toString());
-            _entityService.rollbackWithConditions(aspectRowsToDelete, conditions, false);
+            entityService.rollbackWithConditions(aspectRowsToDelete, conditions, false);
           }
           return response;
         },
@@ -808,23 +864,21 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_END_TIME_MILLIS) @Optional Long endTimeMillis)
       throws URISyntaxException {
     Urn urn = Urn.createFromString(urnStr);
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE),
-            Collections.singletonList(
-                java.util.Optional.of(new EntitySpec(urn.getEntityType(), urn.toString()))))) {
+
+    if (!isAPIAuthorizedEntityUrns(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            DELETE,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to delete entity: " + urnStr);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to delete entity: " + urnStr);
     }
     return RestliUtil.toTask(
         () -> {
           // Find the timeseries aspects to delete. If aspectName is null, delete all.
           List<String> timeseriesAspectNames =
               EntitySpecUtils.getEntityTimeseriesAspectNames(
-                  _entityService.getEntityRegistry(), urn.getEntityType());
+                  entityService.getEntityRegistry(), urn.getEntityType());
           if (aspectName != null && !timeseriesAspectNames.contains(aspectName)) {
             throw new UnsupportedOperationException(
                 String.format("Not supported for non-timeseries aspect '{}'.", aspectName));
@@ -834,7 +888,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
 
           DeleteEntityResponse response = new DeleteEntityResponse();
           if (aspectName == null) {
-            RollbackRunResult result = _entityService.deleteUrn(urn);
+            RollbackRunResult result = entityService.deleteUrn(urn);
             response.setRows(result.getRowsDeletedFromEntityDeletion());
           }
           Long numTimeseriesDocsDeleted =
@@ -868,15 +922,14 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @Nullable Long endTimeMillis,
       @Nonnull List<String> aspectsToDelete) {
     long totalNumberOfDocsDeleted = 0;
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urn.toString()))) {
+
+    if (!isAPIAuthorizedUrns(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            TIMESERIES, DELETE,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to delete entity " + urn);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to delete entity " + urn);
     }
     // Construct the filter.
     List<Criterion> criteria = new ArrayList<>();
@@ -897,7 +950,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     final String entityType = urn.getEntityType();
     for (final String aspect : aspectsToDelete) {
       DeleteAspectValuesResult result =
-          _timeseriesAspectService.deleteAspectValues(entityType, aspect, filter);
+          timeseriesAspectService.deleteAspectValues(entityType, aspect, filter);
       totalNumberOfDocsDeleted += result.getNumDocsDeleted();
 
       log.debug(
@@ -921,18 +974,17 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     boolean dryRun = dry != null ? dry : false;
 
     Urn urn = Urn.createFromString(urnStr);
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urnStr))) {
+
+    if (!isAPIAuthorizedEntityUrns(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            DELETE,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to delete entity " + urnStr);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to delete entity " + urnStr);
     }
     return RestliUtil.toTask(
-        () -> _deleteEntityService.deleteReferencesTo(urn, dryRun),
+        () -> deleteEntityService.deleteReferencesTo(urn, dryRun),
         MetricRegistry.name(this.getClass(), "deleteReferences"));
   }
 
@@ -944,20 +996,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   @WithSpan
   public Task<Void> setWriteable(
       @ActionParam(PARAM_VALUE) @Optional("true") @Nonnull Boolean value) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SET_WRITEABLE_PRIVILEGE),
-            (EntitySpec) null)) {
+
+    if (!isAPIAuthorized(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            PoliciesConfig.SET_WRITEABLE_PRIVILEGE)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to enable and disable write mode.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to enable and disable write mode.");
     }
     log.info("setting entity resource to be writable");
     return RestliUtil.toTask(
         () -> {
-          _entityService.setWritable(value);
+          entityService.setWritable(value);
           return null;
         });
   }
@@ -966,19 +1016,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   @Nonnull
   @WithSpan
   public Task<Long> getTotalEntityCount(@ActionParam(PARAM_ENTITY) @Nonnull String entityName) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_COUNTS_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            COUNTS, READ)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity counts.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity counts.");
     }
     OperationContext opContext = OperationContext.asSession(
-                    systemOperationContext, _authorizer, auth, true);
-    return RestliUtil.toTask(() -> _entitySearchService.docCount(opContext, entityName));
+                    systemOperationContext, RequestContext.builder().buildRestli("getTotalEntityCount", entityName), authorizer, auth, true);
+    return RestliUtil.toTask(() -> entitySearchService.docCount(opContext, entityName));
   }
 
   @Action(name = "batchGetTotalEntityCount")
@@ -986,20 +1035,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   @WithSpan
   public Task<LongMap> batchGetTotalEntityCount(
       @ActionParam(PARAM_ENTITIES) @Nonnull String[] entityNames) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_COUNTS_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            COUNTS, READ)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity counts.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity counts.");
     }
     OperationContext opContext = OperationContext.asSession(
-            systemOperationContext, _authorizer, auth, true);
+            systemOperationContext, RequestContext.builder().buildRestli("batchGetTotalEntityCount", entityNames), authorizer, auth, true);
     return RestliUtil.toTask(
-        () -> new LongMap(_searchService.docCountPerEntity(opContext, Arrays.asList(entityNames))));
+        () -> new LongMap(searchService.docCountPerEntity(opContext, Arrays.asList(entityNames))));
   }
 
   @Action(name = ACTION_LIST_URNS)
@@ -1010,18 +1057,27 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_START) int start,
       @ActionParam(PARAM_COUNT) int count)
       throws URISyntaxException {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
     log.info("LIST URNS for {} with start {} and count {}", entityName, start, count);
-    return RestliUtil.toTask(() -> _entityService.listUrns(entityName, start, count), "listUrns");
+    return RestliUtil.toTask(() -> {
+      ListUrnsResult result = entityService.listUrns(entityName, start, count);
+      if (!isAPIAuthorizedEntityUrns(
+              auth,
+              authorizer,
+              READ, result.getEntities())) {
+        throw new RestLiServiceException(
+                HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity counts.");
+      }
+      return result;
+      }, "listUrns");
   }
 
   @Action(name = ACTION_APPLY_RETENTION)
@@ -1033,23 +1089,22 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam("attemptWithVersion") @Optional @Nullable Integer attemptWithVersion,
       @ActionParam(PARAM_ASPECT_NAME) @Optional @Nullable String aspectName,
       @ActionParam(PARAM_URN) @Optional @Nullable String urn) {
-    Authentication auth = AuthenticationContext.getAuthentication();
+
     EntitySpec resourceSpec = null;
     if (StringUtils.isNotBlank(urn)) {
       Urn resource = UrnUtils.getUrn(urn);
       resourceSpec = new EntitySpec(resource.getEntityType(), resource.toString());
     }
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.APPLY_RETENTION_PRIVILEGE),
+    if (!isAPIAuthorized(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            PoliciesConfig.APPLY_RETENTION_PRIVILEGE,
             resourceSpec)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to apply retention.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to apply retention.");
     }
     return RestliUtil.toTask(
-        () -> _entityService.batchApplyRetention(start, count, attemptWithVersion, aspectName, urn),
+        () -> entityService.batchApplyRetention(start, count, attemptWithVersion, aspectName, urn),
         ACTION_APPLY_RETENTION);
   }
 
@@ -1063,45 +1118,51 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_START) int start,
       @ActionParam(PARAM_COUNT) int count) {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
     OperationContext opContext = OperationContext.asSession(
-            systemOperationContext, _authorizer, auth, true);
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_FILTER, entityName), authorizer, auth, true);
     log.info("FILTER RESULTS for {} with filter {}", entityName, filter);
     return RestliUtil.toTask(
-        () ->
-            validateSearchResult(
-                _entitySearchService.filter(opContext.withSearchFlags(flags -> flags.setFulltext(true)), entityName, filter, sortCriterion, start, count),
-                _entityService),
+        () -> {
+          SearchResult result = entitySearchService.filter(opContext.withSearchFlags(flags -> flags.setFulltext(true)), entityName, filter, sortCriterion, start, count);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity counts.");
+          }
+            return validateSearchResult(
+                result,
+                    entityService);},
         MetricRegistry.name(this.getClass(), "search"));
   }
 
   @Action(name = ACTION_EXISTS)
   @Nonnull
   @WithSpan
-  public Task<Boolean> exists(@ActionParam(PARAM_URN) @Nonnull String urnStr)
+  public Task<Boolean> exists(@ActionParam(PARAM_URN) @Nonnull String urnStr, @ActionParam(PARAM_INCLUDE_SOFT_DELETE) @Nullable @Optional Boolean includeSoftDelete)
       throws URISyntaxException {
     Urn urn = UrnUtils.getUrn(urnStr);
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urnStr))) {
+
+    if (!isAPIAuthorizedEntityUrns(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            EXISTS,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized get entity: " + urnStr);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized check entity existence: " + urnStr);
     }
     log.info("EXISTS for {}", urnStr);
+    final boolean includeRemoved = includeSoftDelete == null || includeSoftDelete;
     return RestliUtil.toTask(
-        () -> _entityService.exists(urn, true), MetricRegistry.name(this.getClass(), "exists"));
+        () -> entityService.exists(urn, includeRemoved), MetricRegistry.name(this.getClass(), "exists"));
   }
 }
